--- a/views/dashboard/dashboardscripts.ejs
+++ b/views/dashboard/dashboardscripts.ejs
@@ -100,6 +100,8 @@
             $('.date').text(dateRange);
             console.log("Cashier Name: ", cashiername, "Date Range: ", dateRange)
 
+            $('.branchid').text('No Data');
+            $('.totalsales').text('No Data');
             displayEmployeeData(cashiername, dateRange);
         });
 
