--- a/views/productinventory/productinventoryscripts.ejs
+++ b/views/productinventory/productinventoryscripts.ejs
@@ -304,9 +304,13 @@
 
         $(document).on('click', '#deleterow', function (e) {
             e.preventDefault()
-            $(this).closest('tr').remove();
+            var $row = $(this).closest('tr');
+            var rowIndex = $row.index();
+            console.log("Deleting row at index:", rowIndex);
+            branches.splice(rowIndex, 1);
+            console.log(branches)
+            $row.remove();
         });
-        console.log('<%= branchid%>')
 
         function LoadList(){
             $.ajax({
